--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,121 @@
-.App {
-  text-align: center;
+.movie-app {
+  max-width: 800px;
+  margin: 0 auto;
+  font-family: sans-serif;
+}
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 40px
+}
+.star {
+  color: gold ;
+  font-size: 30px
+
+}
+.min {
+  margin-right: 20px;
+  font-size : 20px ;
+  margin-top: 8px
+}
+.rate{
+  display: flex ;
+}
+.input {
+  height: 50px;
+  display: flex;
+ width: 435px ;
+  justify-content: space-between;
+  padding: 0 10px;
+  margin-right: 50px
+}
+.name-filter-text {
+  flex: 1;
+  border: 2px solid black;
+  padding: 5px 10px;;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.movie-app-main {
+  margin-top: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.movie-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.movie-card,
+.new-movie-card {
+  border: 2px solid black;
+  width: 300px;
+  height: 450px;
+  position: relative;
+  margin: 10px;
   display: flex;
   flex-direction: column;
+}
+.movie-rating {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px 10px;
+  border-top: none;
+  border-right: none;
+}
+.movie-image {
+  background-image: url(https://www.mearto.com/assets/no-image-83a2b680abc7af87cfff7777d0756fadb9f9aecd5ebda5d34f8139668e0fc842.png);
+  height: 100%;
+  background-color: grey ;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+.movie-description {
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  text-align: center;
+  padding: 10px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  width: 100% ;
+  position: absolute ;
+  bottom: 0px;
+  color:white
+
+  
+}
+.new-movie-card {
+  font-size: 4em;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.Link{
+  position: absolute ;
+  bottom: 60px;
+  cursor: pointer
+}
+.removebutton{
+  position: absolute ; 
+  top: 18px ; 
+  left: 0 ; 
+  border: none ; 
+  background-color: transparent ;
+  font-size: 18px ; 
+  color: white
+}
+.removebutton:hover {
+  color: red ; 
+  cursor: pointer;
+}
+.editbutton{
+  position: absolute ; 
+  right: 0 ; 
+  bottom: 60px ;
+  border: none ; 
+  background-color: transparent ;
+  font-size: 18px ; 
+  color: white
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.editbutton:hover {
+  color:green ;
 }
